# media-poster-space

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
.beads/: .gitignore  README.md  config.yaml  issues.jsonl  metadata.json
.github/workflows/: quality-gates.yml
.sisyphus/: boulder.json
.sisyphus/plans/: media-poster-space-v1.md  onboarding-multi-provider-ui-phase1.md  poster-loading-stability-no-remount.md  wall-edge-buffer-streaming.md  wall-frontend-redesign.md  wall-infinite-queue-no-rerender.md
apps/desktop/: index.html  package.json  vitest.config.ts
apps/desktop/src/: main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: 404.html  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
designs/: design1.html  design2.html  design3.html  design4_cinematic_mosaic.html  design5_obsidian_spotlight.html  design6_prism_flow.html  design7_parallax_horizon.html  design8_fluid_mosaic.html  design9_ethereal_shadows.html  design_onboard0.html  design_onboard1.html
docs/: capability-matrix.md  current-implementation.md  evidence-protocol.md  feedback-workflow.md  poster-wall-design-principles.md  quality-gates.md
scripts/: verify-docs-parity.mjs  verify-thresholds.mjs  verify-wall-contracts.mjs
scripts/contracts/: wall-contracts.json
scripts/release/: package-desktop-release.mjs  package-web-release.mjs  release-manifest.mjs  verify-release-artifacts.mjs  (+1 more)
(+57 files in other folders)
