[package]
name = "mps-desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "mps_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mps-desktop"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
dirs = "5.0"
keyring = "2.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.0", features = [] }
tauri-plugin-autostart = "2.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
